--- a/index.html
+++ b/index.html
@@ -273,21 +273,27 @@ footer {
                 <p>by Ayush</p>
             </article>
             </a>
+           <a href="https://tuber446.github.io/tuber.github.io/index.html" >
             <article>
-                <img src="recent2.jpg" alt="Story 2">
-                <h3>Nawaz quizzed by Model Town JIT in jail for two hours</h3>
-                <p>by SHARIQ BABAR</p>
+                <img src="recent1.jpg" alt="Story 1">
+                <h3>Places to visit in Dubai</h3>
+                <p>by Ayush</p>
             </article>
+            </a>
+           <a href="https://tuber446.github.io/tuber.github.io/index.html" >
             <article>
-                <img src="recent3.jpg" alt="Story 3">
-                <h3>Zardari, Bilawal grilled by NAB in Islamabad</h3>
-                <p>by SHARIQ BABAR</p>
+                <img src="recent1.jpg" alt="Story 1">
+                <h3>Places to visit in Dubai</h3>
+                <p>by Ayush</p>
             </article>
+            </a>
+            <a href="https://tuber446.github.io/tuber.github.io/index.html" >
             <article>
-                <img src="recent1.jpg" alt="Story 4">
-                <h3>Malaysian PM offers tax holidays to foreign investors</h3>
-                <p>by SHARIQ BABAR</p>
+                <img src="recent1.jpg" alt="Story 1">
+                <h3>Places to visit in Dubai</h3>
+                <p>by Ayush</p>
             </article>
+            </a>
             <a href="https://tuber446.github.io/tuber.github.io/index.html" >
             <article>
                 <img src="recent1.jpg" alt="Story 1">
@@ -332,18 +338,18 @@ footer {
         <div class="stories-grid">
             <article>
                 <img src="recent1.jpg" alt="Recent Story 1">
-                <h3>Shutdown in Indian-occupied Kashmir</h3>
-                <p>by SHARIQ BABAR</p>
+                <h3>Best Places to visit in Dubai</h3>
+                <p>by Kumar Ayush</p>
             </article>
             <article>
                 <img src="recent2.jpg" alt="Recent Story 2">
-                <h3>Man sacked, deported from UAE</h3>
-                <p>by SHARIQ BABAR</p>
+                <h3>Best Places to visit in Dubai</h3>
+                <p>by Kumar Ayush</p>
             </article>
             <article>
                 <img src="recent3.jpg" alt="Recent Story 3">
-                <h3>Fugitive billionaire jeweller Nirav Modi arrested</h3>
-                <p>by SHARIQ BABAR</p>
+                <h3>Best Places to visit in Dubai</h3>
+                <p>by Kumar Ayush</p>
             </article>
         </div>
     </section>
